2004-02-24  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-store.c (camel_store_folder_uri_equal): New function to do
	what camel_store_uri_cmp() was supposed to do.

2004-02-23  Rodney Dawes  <dobey@ximian.com>

	* providers/local/camel-mbox-store.c (scan_dir): If our folder has
	a subdir, but no actual children, then we need to unset the flag for
	CAMEL_FOLDER_CHILDREN

	Fixes #54470

2004-02-23  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-store.c (camel_store_uri_cmp): Removed. Useless/broken
	function.

2004-02-20  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-provider.c (camel_provider_list): Init list to NULL to
	prevent the crash in bug #54574.

2004-02-19  Chris Toshok  <toshok@ximian.com>

	* camel-smime-context.c: wrap this file with #ifdef ENABLE_SMIME
	instead of #ifdef HAVE_NSS.

2004-02-19  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (get_folder): Add sanity
	checking to the folder name if we are going to create it, just
	like we do in create_folder().

2004-02-19  Not Zed  <NotZed@Ximian.com>

	* providers/*/camel-*-provider.c
	(camel_provider_module_init): Fixes for api changes.

	* camel-provider.c (camel_provider_load): no longer take session
	argument.  the providers are global resources.
	(camel_provider_init): dont return anything anymore.  (error?)
	call from camel_init now.  Use a recursive lock too.

	* camel-session.c (camel_session_register_provider)
	(camel_session_list_providers, camel_session_get_provider): Moved
	to camel-provider, camel_provider_register/list/get.
	(vee_provider): moved to camel-provider.c

2004-02-18  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_verify): Use the trust to decide the
	validity signature status. (Better way of solving yesterday's
	problem)

	* camel-cipher-context.h: Revert change from yesterday.

2004-02-17  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_verify): Set the trust.
