@@ -27,17 +27,17 @@
 #include <config.h>
 #endif
 
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <sys/ioctl.h>
 #include <sys/wait.h>
-#include <fcntl.h>
 #include <unistd.h>
-#include <stdlib.h>
+#include <signal.h>
+#include <fcntl.h>
 #include <errno.h>
-#include <limits.h>
-#include <stdio.h>
-#include <string.h>
 
 #include "camel-stream-process.h"
 #include "camel-file-utils.h"
